Implement Room-database realated classes and provided some functionalities.
 - Created NoteEntity class to represent note structure
 - Implemented NoteDao interface for database operations
 - Defined NoteDatabase class for Room database setup

 - Added a NoteViewModel class to use Room database for adding and updating notes
 - Created NoteRepository for managing interactions with the database:
 - Added methods for adding and updating notes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="edit_note_label">Edit Note</string>
     <string name="note_title_hint">Title</string>
     <string name="note_details_hint">Start typing</string>
+    <string name="characters">Characters</string>
 </resources>
