Added a custom dialog to choose between adding from camera or gallery when adding an iamge to a note.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="note_title_hint">Title</string>
     <string name="note_details_hint">Start typing</string>
     <string name="characters">Characters</string>
+    <string name="gallery">Gallery</string>
+    <string name="camera">Camera</string>
+    <string name="cancel">Cancel</string>
 </resources>
