--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="gallery">Gallery</string>
     <string name="camera">Camera</string>
     <string name="cancel">Cancel</string>
+    <string name="ok">Ok</string>
+    <string name="attach_link">Attach Link</string>
 </resources>
