feat: added a contextual menu for multi-selction of notes to delete or pin a set of notes at once.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="cancel">Cancel</string>
     <string name="ok">Ok</string>
     <string name="attach_link">Attach Link</string>
+    <string name="delete">Delete</string>
+    <string name="pin">Pin</string>
 </resources>
